Fix the spacing of the stop number, and the stop feature icons

--- a/apps/site/assets/css/_spacing.scss
+++ b/apps/site/assets/css/_spacing.scss
@@ -105,6 +105,10 @@
   margin-top: 1rem;
 }
 
+.mt-n8 {
+  margin-top: -.5rem;
+}
+
 .mt-n16 {
   margin-top: -1rem;
 }
@@ -113,6 +117,11 @@
   margin-top: -1.25rem;
 }
 // End Top
+
+// Bottom
+.mb-6 {
+  margin-bottom: .375rem;
+}
 
 // End
 .me-5 {
